--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <link rel="stylesheet" href="style.css" />
-    <title>For Evelyn</title>
+    <title>Yay!</title>
   </head>
   <body class="not-loaded">
     <div class="night"></div>
